--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.103.3" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.103.3" />
   </ItemGroup>
