--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,21 @@ services:
       - MSSQL_SA_PASSWORD=Password1*
     ports:
       - "1433:1433"
+  
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on: 
+      - docker-demo-sqlserver
+    #Map port 8888 in the docker container to port 80 in the Api
+    ports:
+      - "5000:80"
+    restart: always
+    #Specify Environment Variables for the Api Service
+    environment: 
+      - DBHOST=database
+      - ASPNETCORE_ENVIRONMENT=Development
 
 networks:
   hospital:
