--- a/HospitalApi/appsettings.json
+++ b/HospitalApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=docker-demo-sqlserver,1433;Database=DockerComposeDemo;User=sa;Password={0};TrustServerCertificate=True"
+    "DefaultConnection": "User ID=sa;Password=reallyStrongPwd#123;Server=localhost;Port=5432;Database=Test;Include Error Detail=true;"
   }
 }
