--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,33 @@
 version: '3.8'
 
 services:
-  docker-demo-sqlserver:
-    container_name: docker-demo-sqlserver-container
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    environment:
-      - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=Password1*
+  postgres:
+    container_name: postgres
+    image: postgres
+    restart: always
     ports:
-      - "1433:1433"
+      - 5432:5432
+    networks:
+      - lingopractices
+    volumes:
+      - ./volumes/postgres:/var/lib/postgresql
+    environment:
+      POSTGRES_USER: sa
+      POSTGRES_PASSWORD: reallyStrongPwd#123
+
   
   api:
     build:
       context: .
       dockerfile: Dockerfile
     depends_on: 
-      - docker-demo-sqlserver
+      - postgres
     #Map port 8888 in the docker container to port 80 in the Api
     ports:
       - "5000:80"
     restart: always
     #Specify Environment Variables for the Api Service
     environment: 
-      - DBHOST=database
       - ASPNETCORE_ENVIRONMENT=Development
 
 networks:
